--- a/DirectX12.vcxproj.filters
+++ b/DirectX12.vcxproj.filters
@@ -28,53 +28,11 @@
     <Filter Include="NewEngine\Source">
       <UniqueIdentifier>{c4bc0090-2eda-4495-888b-c14817b54d79}</UniqueIdentifier>
     </Filter>
-    <Filter Include="NewEngine\Header\Developer">
-      <UniqueIdentifier>{d19aa256-ee51-47f2-b6f2-a9b283408773}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Header\Developer\Object">
-      <UniqueIdentifier>{caa4cac8-a121-40ae-a325-bb27cdcea57d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Header\Developer\Object\Object3D">
-      <UniqueIdentifier>{77c437cb-71c6-4003-9cb4-b1fa2f2d2796}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Header\Developer\Object\Object2D">
-      <UniqueIdentifier>{27f66026-8aa8-4bfd-9e12-a340ca0bed29}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Header\Developer\Object\Other">
-      <UniqueIdentifier>{4a7d6d31-2394-4009-9928-b7ca79df5161}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Header\Developer\Component">
-      <UniqueIdentifier>{adf165e6-eeec-4fde-9113-9620645ca794}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Header\Developer\Collision">
-      <UniqueIdentifier>{83e19682-79a0-43d8-8575-d4adfaf103c0}</UniqueIdentifier>
-    </Filter>
     <Filter Include="NewEngine\Header\Render">
       <UniqueIdentifier>{1edb732b-13ca-4c1b-ac35-75dc673cdede}</UniqueIdentifier>
     </Filter>
     <Filter Include="NewEngine\Header\Render\Buffer">
       <UniqueIdentifier>{b7bd0bb9-118e-4ba2-acc1-de14edef096b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Source\Developer">
-      <UniqueIdentifier>{ceedb053-8fb4-4651-9a6f-187337a3c996}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Source\Developer\Object">
-      <UniqueIdentifier>{117a8dd3-3ddc-41ce-9f23-ae9983cf8c86}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Source\Developer\Object\Object3D">
-      <UniqueIdentifier>{ac670bac-76b7-4485-be61-793c005e8cdf}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Source\Developer\Object\Object2D">
-      <UniqueIdentifier>{f53c939f-8689-4e71-8f1e-76adc2adba10}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Source\Developer\Object\Other">
-      <UniqueIdentifier>{39eabe2a-4601-4599-a0bc-87a28b0c2e44}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Source\Developer\Component">
-      <UniqueIdentifier>{dad0205d-fcef-4700-8c16-9784e303e65e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="NewEngine\Source\Developer\Collision">
-      <UniqueIdentifier>{1562e754-1226-417c-beb2-375650af80bd}</UniqueIdentifier>
     </Filter>
     <Filter Include="NewEngine\Source\Render">
       <UniqueIdentifier>{0cd6b8a8-b44a-41d8-98cd-686e7f36ec4f}</UniqueIdentifier>
@@ -127,16 +85,28 @@
     <Filter Include="Application\Header">
       <UniqueIdentifier>{3b72bdd1-0e37-4f84-9615-af682d06bebc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Application\Header\Scene">
+      <UniqueIdentifier>{bf63e877-8567-420d-a7cc-f70e9b0eaa71}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Source\Scene">
+      <UniqueIdentifier>{4549da2c-25e5-4c54-a0d3-93f008c91093}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NewEngine\Source\Collision">
+      <UniqueIdentifier>{1562e754-1226-417c-beb2-375650af80bd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NewEngine\Header\Collision">
+      <UniqueIdentifier>{83e19682-79a0-43d8-8575-d4adfaf103c0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Developer\Collision\ColliderManager.cpp">
-      <Filter>NewEngine\Source\Developer\Collision</Filter>
+      <Filter>NewEngine\Source\Collision</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Developer\Collision\Collision.cpp">
-      <Filter>NewEngine\Source\Developer\Collision</Filter>
+      <Filter>NewEngine\Source\Collision</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Developer\Collision\Collider.cpp">
-      <Filter>NewEngine\Source\Developer\Collision</Filter>
+      <Filter>NewEngine\Source\Collision</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Developer\Input\InputManager.cpp">
       <Filter>NewEngine\Source\Input</Filter>
@@ -177,27 +147,6 @@
     <ClCompile Include="NewEngine\Developer\Util\Util.cpp">
       <Filter>NewEngine\Source\Util</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Developer\Component\Blend.cpp">
-      <Filter>NewEngine\Source\Developer\Component</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Developer\Object\2D\RenderTexture.cpp">
-      <Filter>NewEngine\Source\Developer\Object\Object2D</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Developer\Object\3D\Line.cpp">
-      <Filter>NewEngine\Source\Developer\Object\Object3D</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Developer\Object\Other\DebugCamera.cpp">
-      <Filter>NewEngine\Source\Developer\Object\Other</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Developer\Object\Other\DrawManager.cpp">
-      <Filter>NewEngine\Source\Developer\Object\Other</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Developer\DeveloperManager.cpp">
-      <Filter>NewEngine\Source\Developer</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Developer\Sound.cpp">
-      <Filter>NewEngine\Source\Developer</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Render\Buffer\ConstantBuffer.cpp">
       <Filter>NewEngine\Source\Render\Buffer</Filter>
     </ClCompile>
@@ -231,9 +180,6 @@
     <ClCompile Include="NewEngine\main.cpp">
       <Filter>NewEngine\Source</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\main2.cpp">
-      <Filter>NewEngine\Source</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\NewEngine.cpp">
       <Filter>NewEngine\Source</Filter>
     </ClCompile>
@@ -258,16 +204,37 @@
     <ClCompile Include="NewEngine\Developer\Component\Transform.cpp">
       <Filter>NewEngine\Source\Util</Filter>
     </ClCompile>
+    <ClCompile Include="GameScene.cpp">
+      <Filter>Application\Source\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>Application\Source\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="TitleScene.cpp">
+      <Filter>Application\Source\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Developer\Object\3D\Line.cpp">
+      <Filter>NewEngine\Source\Object\3D</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Developer\Object\2D\RenderTexture.cpp">
+      <Filter>NewEngine\Source\Object\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Developer\Sound.cpp">
+      <Filter>NewEngine\Source\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Developer\Object\Other\DebugCamera.cpp">
+      <Filter>NewEngine\Source\Object\3D</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Developer\Collision\Collider.h">
-      <Filter>NewEngine\Header\Developer\Collision</Filter>
+      <Filter>NewEngine\Header\Collision</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Developer\Collision\ColliderManager.h">
-      <Filter>NewEngine\Header\Developer\Collision</Filter>
+      <Filter>NewEngine\Header\Collision</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Developer\Collision\Collision.h">
-      <Filter>NewEngine\Header\Developer\Collision</Filter>
+      <Filter>NewEngine\Header\Collision</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Developer\Input\InputManager.h">
       <Filter>NewEngine\Header\Input</Filter>
@@ -311,27 +278,6 @@
     <ClInclude Include="NewEngine\Developer\Util\Util.h">
       <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Developer\Component\Blend.h">
-      <Filter>NewEngine\Header\Developer\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Developer\Component\IComponent.h">
-      <Filter>NewEngine\Header\Developer\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Developer\Object\Object2D\RenderTexture.h">
-      <Filter>NewEngine\Header\Developer\Object\Object2D</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Developer\Object\Other\DebugCamera.h">
-      <Filter>NewEngine\Header\Developer\Object\Other</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Developer\Object\Other\DrawManager.h">
-      <Filter>NewEngine\Header\Developer\Object\Other</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Developer\DeveloperManager.h">
-      <Filter>NewEngine\Header\Developer</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Developer\Sound.h">
-      <Filter>NewEngine\Header\Developer</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
       <Filter>NewEngine\Header\Render\Buffer</Filter>
     </ClInclude>
@@ -365,12 +311,6 @@
     <ClInclude Include="NewEngine\Render\GraphicsPipeline.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Developer\Object\3D\Line.h">
-      <Filter>NewEngine\Header\Developer\Object\Object3D</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\main2.h">
-      <Filter>NewEngine\Header</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\NewEngine.h">
       <Filter>NewEngine\Header</Filter>
     </ClInclude>
@@ -393,6 +333,30 @@
       <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Developer\Component\Material.h">
+      <Filter>NewEngine\Header\Object\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene.h">
+      <Filter>Application\Header\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\IScene.h">
+      <Filter>Application\Header\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>Application\Header\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="TitleScene.h">
+      <Filter>Application\Header\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Developer\Object\Object2D\RenderTexture.h">
+      <Filter>NewEngine\Header\Object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Developer\Object\3D\Line.h">
+      <Filter>NewEngine\Header\Object\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Developer\Sound.h">
+      <Filter>NewEngine\Header\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Developer\Object\Other\DebugCamera.h">
       <Filter>NewEngine\Header\Object\3D</Filter>
     </ClInclude>
   </ItemGroup>
