--- a/imgui.ini
+++ b/imgui.ini
@@ -1,63 +1,27 @@
-[Window][DockSpace Demo]
-Pos=0,0
-Size=46,32
-Collapsed=0
-
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][SceneView]
-Pos=9,27
-Size=6,5
+[Window][DebugWindow]
+Pos=604,281
+Size=181,284
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000002,0
 
-[Window][Hierarchy]
-Pos=0,19
-Size=7,13
+[Window][Test]
+Pos=787,281
+Size=235,284
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
-[Window][User]
-Pos=9,19
-Size=6,6
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Inspector]
-Pos=17,19
-Size=15,13
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][GameWindowSetting]
-Pos=555,363
-Size=498,284
-Collapsed=0
-
-[Window][ModelData List Setting]
-Pos=775,312
-Size=600,400
-Collapsed=0
-
-[Window][ModelData Creating]
-Pos=660,255
-Size=600,400
-Collapsed=0
-
-[Window][Texture List Setting]
-Pos=660,308
-Size=600,400
+[Window][Debug]
+Pos=11,17
+Size=342,242
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=32,13 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1369,991 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=229,991 Selected=0x29EABFBD
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1138,991 Split=Y Selected=0x2A8FE092
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1284,64 Selected=0xD6CD1D7F
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1284,925 CentralNode=1 Selected=0x2A8FE092
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=549,991 Selected=0xE7039252
+DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
 
